packages/parser/test/parser/E0109-throw-statement.txt
throw
===== err =====
anonymous:1:6: ParseError: E0109 - Expected expression after `throw` keyword
1 | throw
  |      ^
